fix Tui wrap around no longer running

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -64,7 +64,7 @@ body {
 }
 
 .birdProfileTitle {
-  font-size: 38px;
+  font-size: 42px;
   color: white;
   padding-top: 15px;
   padding-bottom: 20px;
